# CopilotKit

examples/demo-viewer/: OPENROUTER_MIGRATION.md  README.md  update_agents_to_openrouter.py
examples/demo-viewer/agent/: pyproject.toml
examples/demo-viewer/agent/demo/crewai_agentic_chat/: agent.py
examples/demo-viewer/agent/demo/crewai_agentic_generative_ui/: agent.py
examples/demo-viewer/agent/demo/crewai_human_in_the_loop/: agent.py
examples/demo-viewer/agent/demo/crewai_predictive_state_updates/: agent.py
examples/demo-viewer/agent/demo/crewai_shared_state/: agent.py
examples/demo-viewer/agent/demo/crewai_tool_based_generative_ui/: agent.py
examples/demo-viewer/agent/demo/langgraph_agentic_chat/: agent.py
examples/demo-viewer/agent/demo/langgraph_agentic_generative_ui/: agent.py
examples/demo-viewer/agent/demo/langgraph_human_in_the_loop/: agent.py
examples/demo-viewer/agent/demo/langgraph_multi_agent_flows/: agent.py
examples/demo-viewer/agent/demo/langgraph_no_chat/: agent.py
examples/demo-viewer/agent/demo/langgraph_predictive_state_updates/: agent.py
examples/demo-viewer/agent/demo/langgraph_shared_state/: agent.py
examples/demo-viewer/agent/demo/langgraph_tool_based_generative_ui/: agent.py
examples/demo-viewer/src/: files.json
examples/demo-viewer/src/app/api/copilotkit/: route.ts
