[project]
name = "agent"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "CopilotKit" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "copilotkit==0.1.49",
    "langchain==0.3.21",
    "langchain-openai==0.2.3", 
    "langgraph==0.4.8",
    "langsmith==0.3.18",
    "openai>=1.68.2,<2.0.0",
    "fastapi>=0.115.5,<0.116.0",
    "uvicorn>=0.29.0,<0.30.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
langgraph_server = "demo.langgraph_server:main"
crew_server = "demo.crew_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo"]
